# fcheck

./: .gitignore  Cargo.toml  LICENSE  test.py
.github/workflows/: ci.yml
crates/fcheck_core/: Cargo.toml
crates/fcheck_core/src/: args.rs  config.rs  disk.rs  main.rs  model.rs  parser.rs
crates/fcheck_core/tests/: cli.rs
crates/fcheck_diagnostic/: Cargo.toml
crates/fcheck_diagnostic/src/: diagnostic.rs  lib.rs
crates/fcheck_io/: Cargo.toml
crates/fcheck_io/src/: lib.rs
crates/fcheck_parser/: Cargo.toml
crates/fcheck_parser/src/: lib.rs  parser.rs  text.rs
