[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/andenacitelli/fcheck"
authors = ["Anden Acitelli <andenacitelli@gmail.com>"]
license = "MIT"

[workspace.dependencies]
cargo-husky = { version = "1.5.0", features = ["run-cargo-fmt", "run-cargo-check", "run-cargo-clippy", "run-cargo-test"] }