[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/andenacitelli/fcheck"
authors = ["Anden Acitelli <andenacitelli@gmail.com>"]
license = "MIT"

[workspace.dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
