[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/andenacitelli/fcheck"
authors = ["Anden Acitelli <andenacitelli@gmail.com>"]
license = "MIT"

[workspace.dependencies]
assert_cmd = "2.0.14"
cargo-husky = { version = "1.5.0", default-features = false, features = ["run-for-all", "precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }
clap = "4.5.1"
dotenv = "0.15.0"
envconfig = "0.10.0"
env_logger = "^0.11.2"
log = "^0.4.20"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rustpython-parser = "~0.3.0" # pinning is a bit more conservative b/c it's such an important dependency for us

[workspace.lints.rust]
unsafe_code = "forbid"
