[package]
name = "fcheck_core"

[[bin]]
edition = "2021"
name = "fcheck"
path = "src/main.rs"

[dependencies]
rustpython-parser = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
envconfig = { workspace = true }
pretty_assertions = { workspace = true }

[dev-dependencies]
predicates = { workspace = true }
assert_cmd = { workspace = true }

[lints]
workspace = true
