[package]
name = "fcheck_core"

[[bin]]
edition = "2021"
name = "fcheck"
path = "src/main.rs"

[dependencies]
fcheck_parser = { path = "../fcheck_parser" }
fcheck_diagnostic = { path = "../fcheck_diagnostic" }
rustpython-parser = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
envconfig = { workspace = true }
pretty_assertions = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
predicates = { workspace = true }
assert_cmd = { workspace = true }
cargo-husky = { workspace = true }

[lints]
workspace = true
